force-app/main/default/objects/Analytics_Snapshot__c/Analytics_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Analytics Snapshot</label>
    <nameField>
        <label>Analytics Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytics Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>