force-app/main/default/objects/Analytics_Snapshot__c/fields/CompletedSignatures__c.field-meta.xml
<CustomField>
    <fullName>CompletedSignatures__c</fullName>
    <label>\CompletedSignatures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>