force-app/main/default/objects/Analytics_Snapshot__c/fields/CreatedMonth__c.field-meta.xml
<CustomField>
    <fullName>CreatedMonth__c</fullName>
    <label>CreatedMonth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>