force-app/main/default/objects/Analytics_Snapshot__c/fields/CreatedYear__c.field-meta.xml
<CustomField>
    <fullName>CreatedYear__c</fullName>
    <label>CreatedYear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>