force-app/main/default/objects/Analytics_Snapshot__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocumentId</label>
    <referenceTo>DocumentLifecycleConfiguration__c</referenceTo>
    <relationshipLabel>Analytics Snapshots</relationshipLabel>
    <relationshipName>Analytics_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>