force-app/main/default/objects/Analytics_Snapshot__c/fields/PendingSignatures__c.field-meta.xml
<CustomField>
    <fullName>PendingSignatures__c</fullName>
    <label>PendingSignatures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>