force-app/main/default/objects/Analytics_Snapshot__c/fields/SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDate__c</fullName>
    <label>SnapshotDate</label>
    <type>Date</type>
</CustomField>