force-app/main/default/objects/Analytics_Snapshot__c/fields/TotalSignatures__c.field-meta.xml
<CustomField>
    <fullName>TotalSignatures__c</fullName>
    <label>TotalSignatures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>